--- a/Changes
+++ b/Changes
@@ -1,6 +1,7 @@
 Revision history for Excel::XLSX
 
 {{$NEXT}}
+        - Fix typo in dist.ini file
 
 1.01      2025-04-04 10:22:43-07:00 America/Los_Angeles
         - First version, released on an unsuspecting world.
