--- a/Changes
+++ b/Changes
@@ -1,6 +1,7 @@
 Revision history for Excel::XLSX
 
 {{$NEXT}}
+        - Add security policy as per CPANSec recommendation
 
 1.02      2025-04-04 16:13:45-07:00 America/Los_Angeles
         - Fix typo in dist.ini file
